Fix the mobile layout for the information section #2
The image and the text were too far away from each other.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -110,7 +110,11 @@ nav.desktop-nav {
 .read-mores {
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem 2rem 1rem;
+  padding: 0rem 1rem 2rem 1rem;
+}
+
+.read-more figure {
+  padding: 1rem 0;
 }
 
 img.desktop {
@@ -118,7 +122,8 @@ img.desktop {
 }
 
 .read-more-container {
-  padding: 4rem 1rem;
+  padding-bottom: 4rem;
+  padding-left: 1rem;
 }
 
 .read-more:last-child .read-more-container {
